src/snapshots/ruff__linter__tests__F821_F821_2.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  """Test: typing_extensions module imports."""
  from foo import Literal
  
  # F821 Undefined name `Model`
| x: Literal["Model"]
|> Undefined name `Model`
  
  from typing_extensions import Literal
  
  
  # OK
  x: Literal["Model"]
  
  
  import typing_extensions
  
  
  # OK
  x: typing_extensions.Literal["Model"]

