src/snapshots/ruff__linter__tests__F822_F822.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    UndefinedExport: b
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 7
  fix: ~

