src/snapshots/ruff__linter__tests__F822_F822.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  a = 1
  
| __all__ = ["a", "b"]
|> Undefined name `b` in `__all__`

