src/snapshots/ruff__linter__tests__F823_F823.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    UndefinedLocal: my_var
  location:
    row: 6
    column: 4
  end_location:
    row: 6
    column: 10
  fix: ~

