src/snapshots/ruff__linter__tests__F823_F823.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  my_dict = {}
  my_var = 0
  
  
  def foo():
|     my_var += 1
|> Local variable `my_var` referenced before assignment
  
  
  def bar():
      global my_var
      my_var += 1
  
  
  def baz():
      global my_var
      global my_dict
      my_dict[my_var] += 1
  
  
  def dec(x):
      return x
  
  
  @dec
  def f():
      dec = 1
      return dec

