src/snapshots/ruff__linter__tests__F841_F841.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    UnusedVariable: e
  location:
    row: 3
    column: 0
  end_location:
    row: 4
    column: 4
  fix: ~
- kind:
    UnusedVariable: z
  location:
    row: 16
    column: 4
  end_location:
    row: 16
    column: 5
  fix: ~
- kind:
    UnusedVariable: foo
  location:
    row: 20
    column: 4
  end_location:
    row: 20
    column: 7
  fix: ~
- kind:
    UnusedVariable: a
  location:
    row: 21
    column: 5
  end_location:
    row: 21
    column: 6
  fix: ~
- kind:
    UnusedVariable: b
  location:
    row: 21
    column: 8
  end_location:
    row: 21
    column: 9
  fix: ~

